# Barcode

./: CMakeLists.txt  INPUT.txt  demo.c  demo2.c  formulas.c  generator.c  main.c
include/: defines.h  encode_funcs.h  formulas.h  scan_data_funcs.h
src/: encode_funcs.c  formulas.c  main.c  scan_data_funcs.c
